--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,31 +1,9 @@
-name: CI Pipeline
-
-on:
-  push:
-    branches:
-      - develop
-      - feature/*
-      - release/*
-      - hotfix/*
-  pull_request:
-    branches:
-      - develop
-
+name: CI
+on: [push]
 jobs:
-  build:
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: '14'
-
-      - name: Install dependencies
-        run: npm install
-
-      - name: Run tests
-        run: npm test
+build:
+runs-on: ubuntu-latest
+steps:
+- uses: actions/checkout@v2
+- name: Run a one-line script
+run: echo Hello, world!
